--- a/config/locales/devise.zh-CN.yml
+++ b/config/locales/devise.zh-CN.yml
@@ -7,7 +7,7 @@ zh-CN:
     failure:
       already_authenticated: "您已经登录."
       inactive: "您还没有激活帐户."
-      invalid: "邮箱或密码错误"
+      invalid: "手机号或密码错误"
       last_attempt: "你还有多一次尝试正确的密码，过后你的帐户会被锁住"
       locked: "您的帐号已被锁定."
       not_found_in_database: "邮箱或密码不正确"
