--- a/config/locales/simple_form.zh-CN.yml
+++ b/config/locales/simple_form.zh-CN.yml
@@ -42,6 +42,10 @@ zh-CN:
         department: '系别'
         major: '专业'
         remember_me: '记住密码'
+      project:
+        name: '名称'
+        description: '描述'
+        is_public: '属性'
     placeholders:
       user:
         mobile: '请输入登录手机号'
