--- a/config/locales/simple_form.zh-CN.yml
+++ b/config/locales/simple_form.zh-CN.yml
@@ -49,6 +49,9 @@ zh-CN:
       task_category:
         name: '名称'
         description: '描述'
+      task:
+        name: '名称'
+        description: '描述'
     placeholders:
       user:
         mobile: '请输入登录手机号'
