--- a/config/locales/simple_form.zh-CN.yml
+++ b/config/locales/simple_form.zh-CN.yml
@@ -52,6 +52,9 @@ zh-CN:
       task:
         name: '名称'
         description: '描述'
+      announce:
+        title: '标题'
+        description: '描述'
     placeholders:
       user:
         mobile: '请输入登录手机号'
